--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,20 +8,11 @@
         <script src="/scripts.js" type="text/javascript"></script>
         <link rel="stylesheet" href="/desktop.css" th:href="@{~/desktop.css}" type="text/css" />
 
-        <!-- SECTION: Google -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114898488-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-            dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-
-            gtag('config', 'UA-114898488-1');
-        </script>
-
+        <!-- SECTION: Google reCAPTCHA -->
         <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
+        <!-- ENDSECTION -->
 
+        <!-- SECTION: Google Fonts -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster" />
         <!-- ENDSECTION -->
 
