--- a/src/main/resources/public/desktop.css
+++ b/src/main/resources/public/desktop.css
@@ -212,7 +212,7 @@ div#top {
 }
 
 div#summit {
-    background-color: mintcream;
+    background-color: azure;
     border-bottom: 2px solid gray;
     margin-bottom: 20px;
 }
